--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
-.App {
-  text-align: center;
+*{
+  padding:0;
+  margin:0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.icon:hover{
+  background-color:rgba(255,255,255,0.158);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .underlines::after{
+    content:"";
+    height:1px;
+    bottom:-4px;
+    right:8%;
+    width:90%;
+    position:absolute;
+    background-color: rgb(194, 194, 194);
+  
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .recharts-wrapper{
+    width:100%;
+    height:200px;
+  flex-basis: 1;
   }
-  to {
-    transform: rotate(360deg);
-  }
+  /* linear-gradient(40deg,#00464e,#810551) */
+.hellos{
+  padding:5px;
+  background:linear-gradient(40deg,#00464e,#810551);
+  border-radius: 10px;
 }
+
+  .headIcon{
+    color:#525252;
+    cursor: pointer;
+  }
+.headIcon:hover{
+  color:#00a5d9
+}
+.headerBottom:hover{
+  transform: scale(0.99);
+}
+.header input:focus::placeholder{
+  color:#0a6672;
+}
+.header .line{
+  border-right: 1px solid black;
+  /* background-color: red; */
+
+}
+  /* raj is living in the room of his house in his village ahrola no 2 */
+  .svg_circle_second{
+    stroke:red;
+      stroke-width:5;
+      fill:transparent;
+ /* stroke-linecapLinecap:round; */
+ /* stroke-dasharrayasharray:315;
+ stroke-dashoffsetashoffset:315;
+ animation:load 1s ease 1s forwards; */
+ }
+ @keyframes load{
+ to{
+   stroke-dashoffset:var(--p);
+ }
+ }
+ @keyframes reveal{
+ to{
+  
+  translate:0;
+   height:30px;
+ }
+ }
+ @keyframes reveall{
+ to{
+  translate:0;
+   height:30px;
+ }
+ }
